[project]
name = "ultrasafe-assessment"
version = "0.1.0"
description = "FastAPI + RAG + LangGraph assessment"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "sqlalchemy",
  "aiosqlite",
  "passlib[bcrypt]",
  "python-dotenv",
  "httpx",
  "chromadb",
  "sentence-transformers",
  "rank-bm25",
  "numpy",
  "scikit-learn",
  "langgraph",
  "langchain-core",
  "pytest",
  "pytest-asyncio",
]